<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OnePlusTweaks</string>
    <string name="volume_panel_items">Volume Panel Items</string>
    <string name="volume_panel_mod">Volume Panel</string>
    <string name="volume_panel_expanded">Expand volume panel</string>

    <string-array name="streams_entries">
        <item>Call</item>
        <item>Touch</item>
        <item>Ring</item>
        <item>Media</item>
        <item>Alarm</item>
        <item>Bluetooth</item>
    </string-array>
    <string name="hotspot_mod">Hotspot</string>
    <string name="hotspot_2G_channel">2.4G channel</string>
    <string name="hotspot_5G_channel">5G channel</string>
    <string name="hotspot_hidden_ssid">Hide SSID</string>
    <string name="recents_mod">Recents</string>
    <string name="recents_add_clear_button">Clear all button</string>
    <string name="recents_clear_button_location">Clear all button location</string>

    <!-- Content description for Accessibility on unlocked tasks in recents -->
    <string name="accessibility_lock_task">Prevent <xliff:g id="task">%1$s</xliff:g> from being dismissed</string>
    <!-- Content description for Accessibility on locked tasks in recents -->
    <string name="accessibility_unlock_task">Allow <xliff:g id="task">%1$s</xliff:g> to be dismissed</string>
    <string name="volume_panel_location">Volume panel location</string>
</resources>
